Fixing up and styling footnotes

--- a/src/input/css/blocks/badge.css
+++ b/src/input/css/blocks/badge.css
@@ -38,8 +38,10 @@
 		border-radius: var(--radius-round);
 	}
 
-	& * {
+	/* This can fix issues, but honestly I think it creates more than it solves. */
+
+	/* & * {
 		background: inherit;
 		color: inherit;
-	}
+	} */
 }
