Add page views count to layouts and home page

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -17,4 +17,7 @@ layout: base-without-header.njk
 	<div class="[ flow ]">
 		{{ content | safe }}
 	</div>
+	<div>
+		<p id="page-views" class="[ h3 ]"></p>
+	</div>
 </article>
