--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -104,4 +104,7 @@ layout: base-without-header.njk
 	{%- endif -%}
 	{%- include "backlinks.njk" -%}
 	{%- include "webmentions.njk" -%}
+	<div>
+		<p id="page-views" class="[ h3 ]"></p>
+	</div>
 </footer>
