--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -79,6 +79,7 @@ eleventyImport:
 			<p>When I’m not advocating for better digital experiences, I’m probably geeking out over web standards or figuring out how to make life more equitable for {% inlineIcon "fas:users-between-lines" %} <strong>everyone</strong>.</p>
 			<p>If you want, you can <a href="https://elly.to/ama" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "far:circle-question" %} <span>ask me anything</span></a>.</p>
 			<p class="[ lastfm-playing ]">The last song I listened to was <a href="https://www.last.fm/music/Never+Gonna+Give+You+Up/_/Rick+Astley" class="[ song ][ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "fab:lastfm" %} "<span>Never Gonna Give You Up</span>"</a> by <em class="[ artist ]">Rick Astley</em>.</p>
+			<p><a href="https://ellyloel.goatcounter.com" id="page-views" class="[ h6 ]"></a></p>
 		</div>
 		<div hidden>
 			<img class="[ u-photo u-logo ]" src="/../assets/img/elly-puppy-transparent.webp" alt="A cute and playful digital drawing of Elly the Golden Retriever Puppy Girl typing on her sticker covered laptop and looking surprised. She has wavy blonde hair and she's wearing a grey scoop neck top and large green headphones which are tucked under her big fluffy ears." loading="lazy" decoding="async" width="723" height="723">
