Adding label utility class

--- a/src/input/css/global.css
+++ b/src/input/css/global.css
@@ -194,7 +194,7 @@ abbr {
 
 /* Form inputs */
 
-label {
+label, .label {
 	color: var(--neutral-6);
 	font-weight: var(--font-weight-body-bold);
 }
