--- a/src/_includes/bookmark.njk
+++ b/src/_includes/bookmark.njk
@@ -1,7 +1,3 @@
-{%- if note -%}
-	{{ note | md | safe }}
-{%- endif -%}
-
 {%- if excerpt -%}
 	<blockquote>
 		{{- excerpt | md | safe -}}
@@ -12,10 +8,14 @@
 	{%- for highlight in highlights -%}
 		{%- if highlight -%}
 			<blockquote>
-				{{- highlight | nl2br | replace(r/(<br \/>\n)+/gm, "<br><br>") | safe -}}
+				{{- highlight | md | safe -}}
 			</blockquote>
 		{%- endif -%}
 	{%- endfor -%}
+{%- endif -%}
+
+{%- if note -%}
+	{{ note | md | safe }}
 {%- endif -%}
 
 {%- if tags | includes("YouTube") -%}
