Updating the hero to be a bit less hacky

--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -11,10 +11,10 @@ eleventyImport:
 		{%- rollup "src/input/js/eight-ball.js" | url -%}
 		<div class="[ hero ]">
 			<h1>
-				<span class="[ text-fit ]">
-					<span><span class="[ stroke ]" style="--thickness: 0.0125em; --fill-color: var(--accent-bg); --stroke-color: var(--accent-border);">Elly Loel</span></span>
-					<span aria-hidden="true">Elly Loel</span>
-				</span>
+				<span class="[ stroke ]" style="--thickness: 0.02em; --fill-color: var(--accent-bg); --stroke-color: var(--accent-border);">Elly Loel</span>
+				<svg width="100%" viewBox="0 0 75 20">
+					<text lengthAdjust="spacing" x="-0.5" y="15" textLength="76">Elly Loel</text>
+				</svg>
 			</h1>
 			<div class="[ flex flex-wrap gap-1 ]">
 				<a href="https://en.pronouns.page/@ellyloel" class="[ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "local:pronounspage", { "style": "vertical-align: middle" } %} <span class="[ p-pronouns ]"><span class="[ p-pronoun h-pronoun ]">she</span>/<span class="[ p-pronoun h-pronoun ]">her</span></span></a>
