--- a/src/input/content/pages/guestbook.njk
+++ b/src/input/content/pages/guestbook.njk
@@ -77,7 +77,7 @@ This page was inspired by the guestbooks of [Ana Rodrigues](https://ohhelloana.b
 	{%- rollup "src/input/js/guestbook.js" | url -%}
 </form>
 <h2>Previous signees</h2>
-<ol class="[ guestbook-comments ]">
+<ol class="[ guestbook-comments ][ flow ]">
 	{%- for comment in comments | reverse -%}
 	<li class="[ comment ][ flow ]">
 		<div class="[ meta ]">
