--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -106,10 +106,14 @@ eleventyImport:
 			{%- setAsync "imageMarkup" -%}{%- endsetAsync -%}
 			{%- if post.data.image -%}
 				{%- setAsync "imageMarkup" -%}
+				{%- if post.data.noFilter -%}
+				<img class="[ image ]" src="{{ post.data.image }}" alt="">
+				{%- else -%}
 				<svg viewBox="0 0 200 150" width="200" height="150">
 					{%- set randomNumber -%}{%- random 0, 1 -%}{%- endset -%}
 					<image class="image" xlink:href="https://res.cloudinary.com/ellyloel/image/fetch/f_auto/q_auto:low/c_fill,h_150,w_200/{{ post.data.image }}" x="-50%" y="-50%" width="200%" height="200%" filter="url(#filter)" opacity="0.65" style="transform: rotate({{ randomNumber | round(3) }}turn); transform-origin: center;"></image>
 				</svg>
+				{%- endif -%}
 				{%- endsetAsync -%}
 			{%- endif -%}
 			{%- set date = post.date -%}
@@ -122,6 +126,11 @@ eleventyImport:
 			{%- set tags = post.data.tags -%}
 			{%- include "feedItem.njk" -%}
 		{%- endfor -%}
+			<li class="[ feed-item-card ]">
+				<div class="[ feed-item-card-title ]">
+					<h3><a href="/garden/">More posts…</a></h3>
+				</div>
+			</li>
 		</ul>
 	</section>
 </div>
